style: fix float elements

--- a/index.html
+++ b/index.html
@@ -29,20 +29,22 @@
     </div>
 
     <div class="social--card__info">
-      <div class="social--card__followers">
+
+      <div class="social--card social--card__followers">
         <h1>80K</h1>
         <p>Followers</p>
       </div>
 
-      <!-- <div class="social--card__likes">
+      <div class="social--card  social--card__likes">
         <h1>803K</h1>
         <p>Likes</p>
       </div>
 
-      <div class="social--card__photos">
+      
+      <div class="social--card  social--card__photos">
         <h1>1.4K</h1>
         <p>Photos</p>
-      </div> -->
+      </div>
 
     </div>
 
